--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </div>
       <div class="clearbtn">
-        <button type="button" class="btn btn-outline-primary" id="clearDay">Clear Day!</button>
+        <button type="button" class="btn btn-outline-primary" id="clearDay">Clear All</button>
       </div>
 
     </header>
