--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <div class="jumbotron">
         <h1 class="display-3">Work Day Scheduler</h1>
         <p class="lead">A simple calendar app for scheduling your work day</p>
+        <p class="notice">Notice: You won't able to write after 5pm</p>
         <p id="currentDay" class="lead"></p>
       </div>
 
